--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 node_js:
-  - "8.9.4"
+  - 11.6.0
 
 branches:
   only:
@@ -9,7 +9,7 @@ before_script:
   - npm install -g ionic cordova
 
 script:
-  - ionic cordova build browser --no-confirm --prod
+  - ionic cordova build browser --prod
 
 deploy:
   provider: pages
