--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ branches:
 
 before_script:
   - npm install -g ionic cordova
+  - npm install @angular/platform-browser
 
 script:
   - ionic cordova build browser --prod
