--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,13 @@ before_script:
   - npm install -g ionic cordova
 
 script:
-  - ionic cordova build browser --confirm --prod
+  - ionic cordova build browser --confirm --prod --verbose
+
+deploy:
+  provider: pages
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN  # Set in travis-ci.org dashboard
+  keep-history: true
+  on:
+    branch: master
+  local_dir: www
