--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,23 @@
+sudo: required
+dist: trusty
+addons:
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
 language: node_js
 node_js:
-    - stable
-
-branches:
-  only:
-    - master
-
+  - stable
+before_install:
+  - npm i npm@^4 -g
 install:
- - npm install
-
-before_script:
-  - npm install -g ionic cordova
-
+  - npm install
 script:
-  - ionic cordova build browser --confirm --prod --verbose
-
-deploy:
-  provider: pages
-  skip-cleanup: true
-  github-token: $GITHUB_TOKEN  # Set in travis-ci.org dashboard
-  keep-history: true
-  on:
-    branch: master
-  local_dir: www
+  - npm run build
+before_script:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  - sleep 3
+notifications:
+  email: false
