--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,25 @@
-sudo: required
-dist: trusty
-addons:
-  apt:
-    sources:
-      - google-chrome
-    packages:
-      - google-chrome-stable
 language: node_js
 node_js:
-  - stable
-before_install:
-  - npm i npm@^4 -g
+    - stable
+
+branches:
+  only:
+    - master
+
 install:
-  - npm install
-script:
-  - npm run build
+ - npm install
+
 before_script:
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
-  - sleep 3
-notifications:
-  email: false
+  - npm install -g ionic cordova
+
+script:
+  - ionic cordova build browser --confirm --prod --verbose
+
+deploy:
+  provider: pages
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN  # Set in travis-ci.org dashboard
+  keep-history: true
+  on:
+    branch: dev
+  local_dir: www
