--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 
 branches:
   only:
-    - dev
+    - master
 
 install:
  - npm install
@@ -21,5 +21,5 @@ deploy:
   github-token: $GITHUB_TOKEN  # Set in travis-ci.org dashboard
   keep-history: true
   on:
-    branch: dev
+    branch: master
   local_dir: www
