--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
+sudo: required
+dist: trusty
+addons:
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
 language: node_js
 node_js:
   - "10.16.3"
@@ -13,7 +21,7 @@ before_script:
   - npm install -g ionic cordova
 
 script:
-  - ionic cordova build browser --confirm --verbose
+  - ionic cordova build browser --confirm
 
 deploy:
   provider: pages
