--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_script:
   - npm install -g ionic cordova
 
 script:
-  - ionic cordova build browser --confirm
+  - ionic cordova build browser --confirm --prod
 
 deploy:
   provider: pages
