--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+dist: trusty
+sudo: false
+
 language: node_js
 node_js:
   - "10.16.3"
@@ -7,6 +10,13 @@ branches:
     - master
     - dev
 
+addons:
+  chrome: stable
+
+cache:
+  directories:
+    - ./node_modules
+
 install:
   - npm install
 
@@ -14,6 +24,7 @@ before_script:
   - npm install -g ionic cordova
 
 script:
+  - ng test --watch false --browsers ChromeHeadless
   - ionic cordova build browser --confirm --prod
 
 deploy:
